--- a/package.json
+++ b/package.json
@@ -10,11 +10,24 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-navigation/bottom-tabs": "^7.10.1",
+    "@react-navigation/native": "^7.1.28",
     "@supabase/supabase-js": "^2.93.3",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.32",
+    "expo-file-system": "~19.0.21",
+    "expo-font": "^14.0.11",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "^15.0.8",
+    "expo-print": "~15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "private": true
 }
