--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-navigation/bottom-tabs": "^7.10.1",
-    "@react-navigation/native": "^7.1.28",
-    "@supabase/supabase-js": "^2.93.3",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@shopify/react-native-skia": "2.2.12",
+    "@supabase/supabase-js": "^2.39.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "~54.0.32",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
+    "expo": "^54.0.0",
+    "expo-asset": "~12.0.12",
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
-    "expo-font": "^14.0.11",
+    "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
-    "expo-linear-gradient": "^15.0.8",
+    "expo-linear-gradient": "~15.0.8",
     "expo-notifications": "~0.32.16",
     "expo-print": "~15.0.8",
     "expo-sharing": "~14.0.8",
@@ -29,10 +34,13 @@
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-calendars": "^1.1314.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.1"
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1"
   },
   "private": true
 }
