--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "d3-shape": "^3.2.0",
     "expo": "^54.0.0",
     "expo-asset": "~12.0.12",
+    "expo-camera": "~17.0.10",
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-media-library": "~18.2.1",
     "expo-notifications": "~0.32.16",
     "expo-print": "~15.0.8",
     "expo-sharing": "~14.0.8",
@@ -40,6 +42,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-thermal-receipt-printer": "^1.2.0-rc.2",
     "react-native-worklets": "0.5.1"
   },
   "private": true
