--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
     "expo-media-library": "~18.2.1",
     "expo-notifications": "~0.32.16",
     "expo-print": "~15.0.8",
+    "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "lottie-react-native": "~7.3.1",
